# SHIFT_CFT

./: .gitignore  README.md
Classic_CV/: README.md
Classification_Blur_Unblur_image/: README.md  config.py  main.py  pyproject.toml
Classification_Blur_Unblur_image/notebook/: shift.ipynb
Classification_Blur_Unblur_image/src/data/: analyze.py  dataset.py  download_data.py  split.py
Classification_Blur_Unblur_image/src/modeling/: eval_one_epoch.py  fit_one_epoch.py  fix_seed.py  pipeline.py  predict.py  save_training.py  train.py
Classification_metric_learning/: .gitignore  README.md  config.py  main.py  pyproject.toml
Classification_metric_learning/notebook/: Fruit_Veg_classif_metric_learning_.ipynb
Classification_metric_learning/src/data/: create_df.py  dataset.py  download_data.py
Classification_metric_learning/src/modeling/: eval_one_epoch.py  fit_one_epoch.py  model_simpleNN.py  pipeline.py  train.py
Parsing_json/: README.md  pyproject.toml  run.py
Parsing_json/src/: data.py  utils.py
Repo_classification_model/: .gitignore  README.md  config.py  main.py  pyproject.toml
Repo_classification_model/notebooks/: HW_2_CV_Torch_colab.ipynb
Repo_classification_model/src/: CifarDataLoader.py  CifarDataset.py  create_df.py  fix_seed.py  model_SNN.py  resume_training.py  save_training.py  train_model.py  training.py  validating.py
SQL/: README.md  Timofey_Volkov_CV.ipynb
Yolo_v5/: README.md  yolo.ipynb
