[tool.poetry]
name = "hw-pipeline"
version = "0.1.0"
description = ""
authors = ["Volkov Timofey <volkow.timofey@ya.ru>"]
readme = "README.md"
packages = [{include = "hw_pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
tqdm = "^4.65.0"
torchvision = "^0.14.1"
torch = "^1.13.1"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
hydra-core = "^1.3.2"
kaggle = "^1.5.13"
wandb = "^0.13.11"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
